added user log in/log out functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,13 @@
     <% flash.each do |x| %>
       <%= x %>
     <% end %>
+    <% if signed_in? %>
+      <%= current_user.email %>
+      <%= button_to "Sign out", "/sign_out", method: :delete %>
+    <% else %>
+      <%= link_to "Sign in", "/sign_in" %>
+      <%= link_to "Sign up", "/users/new" %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
