--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,21 +9,9 @@
   </head>
 
   <body>
-    <div>
-      <% flash.each do |x| %>
-        <%= x %>
-      <% end %>
-    </div>
-    <div>
-      <% if signed_in? %>
-        <%= current_user.email %>
-        <%= link_to "Sign out", "/sign_out", method: :delete %>
-      <% else %>
-        <%= link_to "Sign in", "/sign_in" %>
-        <%= link_to "Sign in with Facebook", "/auth/facebook" %>
-        <%= link_to "Sign up", "/users/new" %>
-      <% end %>
-    </div>
+    <%= render "shared/modals" %>
+    <%= render "shared/navbar" %>
+    <%= render "shared/flash"  %>
     <%= yield %>
   </body>
 </html>
