--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,16 +1,16 @@
 <% @user = user if defined? user %>
 
-<div class="row">
-  <div class="col-sm-offset-2 col-sm-10">
-    <%= button_to "/auth/facebook", class: "btn btn-lg btn-block btn-facebook" do %>
-      <%= icon("facebook", "Sign in with Facebook") %>
-    <% end %>
-  </div>
-</div>
+<%= render "shared/facebook_button" %>
 
 <div class="sign-in-method-separator row"></div>
 
 <%= form_for @user, html: { class: "form-horizontal" } do |f| %>
+  <div class="form-group row">
+    <%= f.label :full_name, nil, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :full_name, class: "form-control" %>
+    </div>
+  </div>
   <div class="form-group row">
     <%= f.label :email, nil, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
