--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,8 @@
 <%= form_for @user, html: { class: "form-horizontal" } do |f| %>
+  <%= user_avatar @user %>
+  <%= f.label :avatar %>
+  <%= f.file_field :avatar %>
+
   <div class="form-group row">
     <%= f.label :full_name, nil, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
