cloudinary + carrierwave integration

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<%= user_avatar @user, :large %>
 <h3><%= @user.full_name %></h3>
 <br>bio: <%= @user.bio || "no bio" %>
 <br>website: <%= @user.website || "no website" %>
