--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,6 @@
 <%= form_for @user, html: { class: "form-horizontal" } do |f| %>
-  <%= user_avatar @user %>
+  <%= user_avatar @user, :large %>
+  <%= f.hidden_field(:avatar) %>
   <%= f.label :avatar %>
   <%= f.file_field :avatar %>
 
