--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,3 +8,7 @@
 <br><% if @user == current_user %>
   <%= link_to "Edit profile", [:edit, @user] %>
 <% end %>
+<h3>Images</h3>
+<% @user.posts.each do |x| %>
+  <span><%= link_to x do %><%= image_tag x.image_url, width: 100, height: 100 %><% end %></span>
+<% end %>
