--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,20 +1,8 @@
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <td>ID</td>
-      <td>Full name</td>
-      <td>Email</td>
-      <td>Username</td>
-    </tr>
-  </thead>
-  <tbody>
-    <% @users.each do |x| %>
-      <tr>
-        <td><%= x.id %></td>
-        <td><%= link_to x.full_name, x %></td>
-        <td><%= x.email %></td>
-        <td><%= x.username || "none" %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= form_tag "/users", method: :get, remote: true do %>
+  <%= label_tag(:q, "Search user:") %>
+  <%= text_field_tag(:q) %>
+  <%= submit_tag("Search") %>
+<% end %>
+<div id="user_index_table">
+  <%= render "user_index_table", users: @users %>
+</div>
