--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <body>
     <%= render "shared/modals" %>
     <%= render "shared/navbar" %>
-    <%= render "shared/flash"  %>
-    <%= yield %>
+    <div id="content" class="container-fluid">
+      <%= render "shared/flash"  %>
+      <%= yield %>
+    </div>
   </body>
 </html>
