--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -3,3 +3,5 @@
 
 <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+ <!-- google fonts -->
+<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
