--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@ $dark: #444;
 $gray: #999;
 $white: #FFF;
 $facebookBlue: #3B5998;
+$emerald: #2ecc71;
 // $main: #22c322;
 $main: #444;
 $maxwidth: 960px;
@@ -32,10 +33,39 @@ body {
   color: $dark;
   font-size: 16px;
 }
+textarea {
+  resize: none;
+}
+.block-form {
+  max-width: 640px;
+  margin: 0 auto;
+}
 #content {
   background-color: #FAFAFA;
 }
+//
+// photo selector
+//
+.photo-selector {
+  font-size: 0;
+  text-align: center;
 
+  > img {
+    margin: 4px;
+
+    &.selected {
+      border: 4px solid $emerald;
+    }
+  }
+
+  input[type=checkbox] {
+    display: none;
+  }
+
+  input[type=submit] {
+    font-size: 16px;
+  }
+}
 //
 // SIGN IN PAGE ELEMENTS
 //
