--- a/app/views/albums/edit.html.erb
+++ b/app/views/albums/edit.html.erb
@@ -1,13 +1,1 @@
-<%= form_for @album do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :description %>
-  <%= f.text_area :description %>
-  <h3>photos</h3>
-  <% current_user.posts.each do |x| %>
-    <%= image_tag x.image_url, width: 100, height: 100 %>
-    <% in_album = @album.posts.include? x %>
-    <%= f.check_box :posts, {id: "album_posts_#{x.id}", name: "album[posts][]", checked: in_album}, x.id, nil %>
-  <% end %>
-  <%= f.submit %>
-<% end %>
+<%= render "albums/form" %>
