refactor and style image grids

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,6 +44,14 @@ textarea {
   background-color: #FAFAFA;
 }
 //
+// 2 column image grid
+//
+.image-grid {
+  img {
+    padding: 16px;
+  }
+}
+//
 // photo selector
 //
 .photo-selector {
