--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -2,13 +2,9 @@
 <p><%= @album.description %></p>
 
 <h3>Photos</h3>
-<% @album.posts.each do |x| %>
-  <div class="col-sm-6">
-    <%= link_to x do %>
-      <%= cl_image_tag x.image.filename, class: "img-responsive", type: :upload, width: 640, height: 480, crop: :fill %>
-    <% end %>
-  </div>
-<% end %>
+
+<%= render partial: "shared/image_grid", locals: {posts: @album.posts} %>
+
 <div class="row"></div>
 <% if @album.user == current_user %>
   <%= link_to "Edit album", [:edit, @album], class: "btn btn-default" %>
