--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,3 @@
 <h3>Showing <%= @posts.count %> posts</h3>
-<% @posts.each do |x| %>
-  <div class="col-sm-6">
-    <%= link_to x do %>
-      <%= cl_image_tag x.image.filename, class: "img-responsive", type: :upload, width: 640, height: 480, crop: :fill %>
-    <% end %>
-  </div>
-<% end %>
+
+<%= render partial: "shared/image_grid", locals: {posts: @posts} %>
