--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,10 +15,5 @@
 </div>
 
 <h3>Images</h3>
-<% @user.posts.each do |x| %>
-  <div class="col-sm-6">
-    <%= link_to x do %>
-      <%= cl_image_tag x.image.filename, class: "img-responsive", type: :upload, width: 640, height: 480, crop: :fill %>
-    <% end %>
-  </div>
-<% end %>
+
+<%= render partial: "shared/image_grid", locals: {posts: @user.posts} %>
