--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -1,9 +1,9 @@
 <div class="block-form">
-  <%= form_for @album do |f| %>
+  <%= form_for @album, html: {class: "album-form form-horizontal"} do |f| %>
     <div class="form-group row">
       <%= f.label :title, nil, class: "col-sm-2 control-label" %>
       <div class="col-sm-10">
-        <%= f.text_field :title, class: "form-control" %>
+        <%= f.text_field :title, class: "form-control", required: true %>
       </div>
     </div>
     <div class="form-group row">
@@ -14,6 +14,7 @@
     </div>
     <h3>photos</h3>
     <div class="photo-selector">
+      <div><label for="album[posts][]" class="error"></label></div>
       <% current_user.posts.each do |x| %>
         <% in_album = @album.posts.include? x %>
         <% classes = in_album ? "selected" : "" %>
