--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -1,28 +1,26 @@
-<div class="block-form">
-  <%= form_for @album, html: {class: "album-form form-horizontal"} do |f| %>
-    <div class="form-group row">
-      <%= f.label :title, nil, class: "col-sm-2 control-label" %>
-      <div class="col-sm-10">
-        <%= f.text_field :title, class: "form-control", required: true %>
-      </div>
+<%= form_for @album, html: {class: "album-form block-form form-horizontal"} do |f| %>
+  <div class="form-group row">
+    <%= f.label :title, nil, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :title, class: "form-control", required: true %>
     </div>
-    <div class="form-group row">
-      <%= f.label :description, class: "col-sm-2 control-label" %>
-      <div class="col-sm-10">
-        <%= f.text_area :description, class: "form-control" %>
-      </div>
+  </div>
+  <div class="form-group row">
+    <%= f.label :description, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_area :description, class: "form-control" %>
     </div>
-    <h3>photos</h3>
-    <div class="photo-selector">
-      <div><label for="album[posts][]" class="error"></label></div>
-      <% current_user.posts.each do |x| %>
-        <% in_album = @album.posts.include? x %>
-        <% classes = in_album ? "selected" : "" %>
-        <%= cl_image_tag x.image.filename, class: classes, type: :upload, width: 200, height: 200, crop: :fill %>
-        <%= f.check_box :posts, {id: "album_posts_#{x.id}", name: "album[posts][]", checked: in_album}, x.id, nil %>
-      <% end %>
-      <br>
-      <%= f.submit nil, class: "btn btn-primary" %>
-    </div>
-  <% end %>
-</div>
+  </div>
+  <h3>photos</h3>
+  <div class="photo-selector">
+    <div><label for="album[posts][]" class="error"></label></div>
+    <% current_user.posts.each do |x| %>
+      <% in_album = @album.posts.include? x %>
+      <% classes = in_album ? "selected" : "" %>
+      <%= cl_image_tag x.image.filename, class: classes, type: :upload, width: 200, height: 200, crop: :fill %>
+      <%= f.check_box :posts, {id: "album_posts_#{x.id}", name: "album[posts][]", checked: in_album}, x.id, nil %>
+    <% end %>
+    <br>
+    <%= f.submit nil, class: "btn btn-primary" %>
+  </div>
+<% end %>
