--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,13 +1,17 @@
-<%= form_for @post do |f| %>
-  <div>
-    <%= f.label :image %>
-    <%= f.file_field :image %>
+<%= form_for @post, html: {class: "post-form block-form form-horizontal"} do |f| %>
+  <div class="form-group row">
+    <%= f.label :image, nil, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.file_field :image, required: true, accept: "image/gif,image/jpeg,image/png" %>
+    </div>
   </div>
-  <div>
-    <%= f.label :description %>
-    <%= f.text_area :description %>
+  <div class="form-group row">
+    <%= f.label :description, nil, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_area :description, class: "form-control" %>
+    </div>
   </div>
-  <div>
-    <%= f.submit %>
+  <div class="col-sm-offset-2">
+    <%= f.submit nil, class: "btn btn-primary " %>
   </div>
 <% end %>
