--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,14 @@
 <%= form_for @user, html: { class: "form-horizontal" } do |f| %>
-  <%= user_avatar @user, :large %>
-  <%= f.label :avatar %>
-  <%= f.file_field :avatar %>
+  <%= user_avatar @user, :large, class: "profile-image" %>
+
+  <div style="height: 32px"></div>
+  
+  <div class="form-group row">
+    <%= f.label :avatar, nil, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.file_field :avatar %>
+    </div>
+  </div>
 
   <div class="form-group row">
     <%= f.label :full_name, nil, class: "col-sm-2 control-label" %>
