--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-4">
-    <%= user_avatar @user, :large, class: "img-responsive" %>
+    <%= user_avatar @user, :large, class: "img-responsive profile-image" %>
   </div>
   <div class="col-sm-8">
     <h1><%= @user.full_name %></h1>
