--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,10 +14,24 @@
      </ul>
      <ul class="nav navbar-nav navbar-right">
        <% if signed_in? %>
-         <li><%= link_to "New post", "/posts/new" %></li>
-         <li><%= link_to "New album", "/albums/new" %></li>
-         <li><%= link_to current_user do %><%= user_avatar current_user, :small, class: "profile-image" %><% end %></li>
-         <li><%= link_to "Sign out", "/sign_out", method: :delete %></li>
+         <li class="dropdown">
+           <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+             Upload
+           </a>
+           <ul class="dropdown-menu">
+             <li><%= link_to "New post", "/posts/new" %></li>
+             <li><%= link_to "New album", "/albums/new" %></li>
+           </ul>
+         </li>
+         <li class="dropdown">
+           <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+             <%= user_avatar current_user, :small, class: "profile-image" %>
+           </a>
+           <ul class="dropdown-menu">
+             <li><%= link_to "Profile page", current_user %></li>
+             <li><%= link_to "Sign out", "/sign_out", method: :delete %></li>
+           </ul>
+         </li>
        <% else %>
          <li><a href="#" data-toggle="modal" data-target="#modal-sign-up">Sign up</a></li>
          <li><a href="#" data-toggle="modal" data-target="#modal-sign-in">Sign in</a></li>
