--- a/app/views/users/initial_setup.html.erb
+++ b/app/views/users/initial_setup.html.erb
@@ -1,5 +1,11 @@
-<%= form_for user do |f| %>
-  <%= f.label :username %>
-  <%= f.text_field :username %>
-  <%= f.submit %>
+<%= form_for user, html: {class: "username-form"} do |f| %>
+  <div>
+    <%= f.label :username %>
+  </div>
+  <div>
+    <%= f.text_field :username, required: true %>
+  </div>
+  <div>
+    <%= f.submit %>
+  </div>
 <% end %>
