--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="container-fluid">
   <% flash.each do |x| %>
     <div class="alert alert-<%= x[0] %> alert-dismissible" role="alert">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
