applied rails_best_practices

--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @album, html: {class: "album-form block-form form-horizontal"} do |f| %>
+<%= form_for album, html: {class: "album-form block-form form-horizontal"} do |f| %>
   <div class="form-group row">
     <%= f.label :title, nil, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
@@ -14,7 +14,7 @@
   <h3>photos</h3>
   <div class="photo-selector">
     <% current_user.posts.each do |x| %>
-      <% in_album = @album.posts.include? x %>
+      <% in_album = album.posts.include? x %>
       <% classes = in_album ? "selected" : "" %>
       <%= cl_image_tag x.image.filename, class: classes, type: :upload, width: 200, height: 200, crop: :fill %>
       <%= f.check_box :posts, {id: "album_posts_#{x.id}", name: "album[posts][]", checked: in_album}, x.id, nil %>
